--- a/css_basic/styles.css
+++ b/css_basic/styles.css
@@ -1,18 +1,40 @@
-body    {
-    flex-direction: column;
-}
-
-main    {
+main{
+    display: flex;
     flex-direction: row;
     flex: auto;
 }
 
-article {
-    flex: 2
-    overflow-y: auto
+article{
+    flex: 2;
+    overflow-y: auto;
+    background-color: black;
+    font-weight:lighter;
+    font-family: Arial, Helvetica, sans-serif;
+    color: white;
+    padding: 15px;
+    font-size: 20px;
+    margin: 15px;
+    border-radius: 25px;
 }
 
-aside   {
-    flex: 1
-    overflow-y: auto
+aside{
+    flex: 1;
+    overflow-y: auto;
+}
+
+header{
+    background-color: rgb(143, 126, 179);
+    font-size: 15;
+    font-style:normal;
+    height: 60px;
+    width: 100%;
+    display:flex;
+    flex-direction: row;
+}
+
+.logo{
+    height: auto;
+    max-width: 10%;
+    object-fit: contain;
+    color: white;
 }
